Fixed styling on small screens

--- a/app/css/sampleApp.css
+++ b/app/css/sampleApp.css
@@ -16,19 +16,22 @@ body {
     color: #dd1b16;
 }
 
-.navbar-left {
-    font-size: 20px;
-    color: #000;
-    margin-top: 25px;
-}
-
 #top-nav {
     height: 80px;
 }
 
-.navbar-right img {
-    max-width: 60px;
-    padding-top: 10px;
+.navbar-text {
+    display: inline-block;
+    font-size: 20px;
+    color: #000;
+    margin-left: 0;
+    margin-top: 25px;
+}
+
+.top-cow-logo {
+    float: right;
+    width: 60px;
+    margin-top: 8px;
 }
 
 .navigation {
@@ -51,4 +54,15 @@ body {
 
 .instructions {
     margin-bottom: 25px;
+}
+
+@media (max-width: 768px) {
+    .top-cow-logo { 
+        width: 40px;
+        margin-top: 20px;
+    }
+    .navbar-text {
+        margin-top: 30px;
+        font-size: 16px;
+    }
 }
